// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot in dracula mode 1`] = `
<DocumentFragment>
  .c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  font-size: 0.9rem;
}

.c9 a {
  margin: 16px;
  border-radius: 4px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  border: 0;
  height: 1px;
  background-color: white;
  background-image: linear-gradient(to right,white,white,white);
}

.c3 {
  position: absolute;
  height: 0;
  width: 0;
  visibility: hidden;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  cursor: url('/static/images/retro/cursor/pointer.cur'),pointer;
  border-radius: 65px;
  width: 65px;
  height: 28px;
  background-color: orange;
}

.c5:hover {
  background-color: darkorange;
}

.c7 {
  content: '';
  position: absolute;
  top: 2px;
  left: 2px;
  border-radius: 24px;
  width: 24px;
  height: 24px;
  background-color: black;
  -webkit-transition: 0.2s all ease-in-out;
  transition: 0.2s all ease-in-out;
}

.c2:checked + .c4 .c6 {
  left: calc(100% - 2px);
  -webkit-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.c0 {
  max-width: 768px;
  padding: 16px;
  margin: 32px auto;
  background-color: black;
  font-family: Fira Code,monospace;
}

.c0 img {
  max-width: 100%;
  display: block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 32px;
}

.c1 a {
  position: relative;
  top: -8px;
  font-size: 1.4rem;
  font-weight: bold;
}

@media screen and (max-width:360px) {
  .c9 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    text-align: center;
  }
}

@media screen and (max-width:768px) {
  .c0 {
    margin: 16px 8px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <a
        href="/"
      >
        Breno Baptista
      </a>
      <input
        checked=""
        class="c2 c3"
        id="checkbox"
        type="checkbox"
      />
      <label
        class="c4 c5"
        data-testid="label-checkbox"
        for="checkbox"
        tabindex="0"
      >
        <span
          class="c6 c7"
        />
      </label>
    </div>
    <main />
    <footer>
      <hr
        class="c8"
      />
      <nav
        class="c9"
      >
        <div
          class="c10"
        >
          <a
            href="https://github.com/brenobaptista/"
            rel="noreferrer noopener"
            target="_blank"
          >
            GitHub
          </a>
          <a
            href="https://www.linkedin.com/in/breno-baptista/"
            rel="noreferrer noopener"
            target="_blank"
          >
            LinkedIn
          </a>
        </div>
        <div
          class="c10"
        >
          <a
            href="/rss.xml"
          >
            RSS Feed
          </a>
          <a
            href="/donations"
          >
            Donations
          </a>
        </div>
        <div
          class="c10"
        >
          <a
            href="mailto:contact@brenobaptista.tech"
          >
            Email
          </a>
          <a
            href="/resume"
          >
            Résumé
          </a>
        </div>
      </nav>
    </footer>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot in retro mode for home 1`] = `
<DocumentFragment>
  .c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: space-around;
  -webkit-justify-content: space-around;
  -ms-flex-pack: space-around;
  justify-content: space-around;
  font-size: 0.9rem;
}

.c9 a {
  margin: 16px;
  border-radius: 4px;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c8 {
  border: 0;
  height: 1px;
  background-color: white;
  background-image: linear-gradient(to right,white,white,white);
}

.c11 {
  margin: 24px 0;
  font-size: 0.9rem;
  text-align: center;
}

.c11 a {
  margin: 0 8px;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin: 8px 0 16px;
}

.c13 {
  text-align: center;
  font-size: 0.8rem;
}

.c3 {
  position: absolute;
  height: 0;
  width: 0;
  visibility: hidden;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  position: relative;
  cursor: url('/static/images/retro/cursor/pointer.cur'),pointer;
  border-radius: 65px;
  width: 65px;
  height: 28px;
  background-color: orange;
}

.c5:hover {
  background-color: darkorange;
}

.c7 {
  content: '';
  position: absolute;
  top: 2px;
  left: 2px;
  border-radius: 24px;
  width: 24px;
  height: 24px;
  background-color: black;
  -webkit-transition: 0.2s all ease-in-out;
  transition: 0.2s all ease-in-out;
}

.c2:checked + .c4 .c6 {
  left: calc(100% - 2px);
  -webkit-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.c0 {
  max-width: 768px;
  padding: 16px;
  margin: 32px auto;
  background-color: black;
  font-family: Fira Code,monospace;
}

.c0 img {
  max-width: 100%;
  display: block;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-bottom: 32px;
}

.c1 a {
  position: relative;
  top: -8px;
  font-size: 1.4rem;
  font-weight: bold;
}

@media screen and (max-width:360px) {
  .c9 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    text-align: center;
  }
}

@media screen and (max-width:768px) {
  .c0 {
    margin: 16px 8px;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div />
      <input
        class="c2 c3"
        id="checkbox"
        type="checkbox"
      />
      <label
        class="c4 c5"
        data-testid="label-checkbox"
        for="checkbox"
        tabindex="0"
      >
        <span
          class="c6 c7"
        />
      </label>
    </div>
    <main />
    <footer>
      <hr
        class="c8"
      />
      <nav
        class="c9"
      >
        <div
          class="c10"
        >
          <a
            href="https://github.com/brenobaptista/"
            rel="noreferrer noopener"
            target="_blank"
          >
            GitHub
          </a>
          <a
            href="https://www.linkedin.com/in/breno-baptista/"
            rel="noreferrer noopener"
            target="_blank"
          >
            LinkedIn
          </a>
        </div>
        <div
          class="c10"
        >
          <a
            href="/rss.xml"
          >
            RSS Feed
          </a>
          <a
            href="/donations"
          >
            Donations
          </a>
        </div>
        <div
          class="c10"
        >
          <a
            href="mailto:contact@brenobaptista.tech"
          >
            Email
          </a>
          <a
            href="/resume"
          >
            Résumé
          </a>
        </div>
      </nav>
      <hr
        class="c8"
      />
      <div
        class="c11"
      >
        <a
          href="https://hotlinewebring.club/brenobaptista/previous"
          rel="noreferrer noopener"
          target="_blank"
        >
          ←
        </a>
        <a
          href="https://hotlinewebring.club/"
          rel="noreferrer noopener"
          target="_blank"
        >
          Hotline Webring
        </a>
        <a
          href="https://hotlinewebring.club/brenobaptista/next"
          rel="noreferrer noopener"
          target="_blank"
        >
          →
        </a>
      </div>
      <div
        class="c12"
      >
        <img
          alt="Bookmark this page"
          height="31"
          src="/static/images/retro/badges/bookmark.gif"
          width="88"
        />
        <img
          alt="Sign my guestbook"
          height="31"
          src="/static/images/retro/badges/guestbook.gif"
          width="88"
        />
        <img
          alt="Best viewed with anything"
          height="31"
          src="/static/images/retro/badges/best-viewed.gif"
          width="88"
        />
        <img
          alt="Free speech forever"
          height="31"
          src="/static/images/retro/badges/free-speech.gif"
          width="88"
        />
        <img
          alt="Nuke IE"
          height="31"
          src="/static/images/retro/badges/nuke-ie.gif"
          width="88"
        />
        <img
          alt="Anarchy now"
          height="31"
          src="/static/images/retro/badges/anarchy.gif"
          width="88"
        />
        <img
          alt="Best viewed with eyes"
          height="31"
          src="/static/images/retro/badges/viewed-eyes.gif"
          width="88"
        />
        <img
          alt="Tux - Linux penguin"
          height="31"
          src="/static/images/retro/badges/penguin.gif"
          width="88"
        />
        <img
          alt="Geocities"
          height="31"
          src="/static/images/retro/badges/geocities.gif"
          width="88"
        />
        <img
          alt="Internet privacy"
          height="31"
          src="/static/images/retro/badges/privacy.gif"
          width="88"
        />
        <img
          alt="Wiby search engine"
          height="31"
          src="/static/images/retro/badges/wiby.gif"
          width="88"
        />
        <img
          alt="I survived Y2K"
          height="31"
          src="/static/images/retro/badges/y2k.gif"
          width="88"
        />
        <img
          alt="Email me"
          height="31"
          src="/static/images/retro/badges/email.gif"
          width="88"
        />
        <img
          alt="Best viewed with a monitor"
          height="31"
          src="/static/images/retro/badges/monitor.gif"
          width="88"
        />
        <img
          alt="I wish it was 2001"
          height="31"
          src="/static/images/retro/badges/2001.gif"
          width="88"
        />
        <img
          alt="No code and run"
          height="31"
          src="/static/images/retro/badges/nocodeandrun.gif"
          width="88"
        />
      </div>
      <div
        class="c13"
      >
        © 2020-2021 Breno Baptista
      </div>
    </footer>
  </div>
</DocumentFragment>
`;
